syntax = "proto3";

option csharp_namespace = "BookWorm.Catalog.Grpc.Services";

package CatalogApi;

service BookGrpcService {
  rpc GetBook(BookRequest) returns (BookResponse);
  rpc GetBooks(BooksRequest) returns (BooksResponse);
}

// Custom decimal type to preserve .NET decimal precision
message Decimal {
  // The whole units of the decimal
  int64 units = 1;
  // The fractional part in nanoseconds (up to 9 decimal places)
  int32 nanos = 2;
}

message BookRequest {
  string bookId = 1;
}

message BookResponse {
  string id = 1;
  string name = 2;
  Decimal price = 3;
  Decimal priceSale = 4;
  BookStatus status = 5;
}

message BooksRequest {
  repeated string bookIds = 1;
}

message BooksResponse {
  repeated BookResponse books = 1;
}

enum BookStatus {
  InStock = 0;
  OutOfStock = 1;
}